--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
 
   cupertino_icons: ^0.1.3
+  google_fonts: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -29,4 +30,8 @@ flutter:
 
   assets:
     - assets/images/
+  fonts:
+    - family: Lobster
+      fonts:
+        - asset: assets/fonts/Lobster/Lobster-Regular.ttf
 
