--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
 
 
   cupertino_icons: ^0.1.3
-  google_fonts: ^1.1.1
+  carousel_slider: ^2.2.1
 
 dev_dependencies:
   flutter_test:
