--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/alphabets/
+    - assets/images/numbers
   fonts:
     - family: Lobster
       fonts:
