--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ flutter:
     - assets/images/days/
     - assets/images/colour_cards/
     - assets/images/family_cards/
+    - assets/images/food_cards/
 
 
   fonts:
