--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ flutter:
     - assets/images/family_cards/
     - assets/images/food_cards/
     - assets/images/animal_cards/
+    - assets/images/emotions_cards/
 
   fonts:
     - family: Lobster
