--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
     - assets/images/emotions_cards/
     - assets/images/greetings_cards/
     - assets/images/colours_gifs/
+    - assets/images/colours_splash/
 
   fonts:
     - family: Lobster
