Added family gifs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ flutter:
     - assets/images/greetings_cards/
     - assets/images/colours_gifs/
     - assets/images/colour_splash/
-
+    - assets/images/family_gifs/
   fonts:
     - family: Lobster
       fonts:
