--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,8 @@ flutter:
     - assets/images/family_gifs/
     - assets/images/food_gifs/
     - assets/images/greetings_gifs/
-    - assets/images/greetings
-    - assets/images/food
+    - assets/images/greetings/
+    - assets/images/food/
 
 
   fonts:
