--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/images/greetings_gifs/
     - assets/images/greetings/
     - assets/images/food/
+    - assets/images/family/
 
 
 
