--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - assets/images/emotions/
     - assets/images/animal/
     - assets/images/resources/
+    - assets/images/quizzes/
 
   fonts:
     - family: Lobster
