--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   carousel_slider: ^2.2.1
+  rflutter_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,7 @@ flutter:
     - assets/images/animal/
     - assets/images/resources/
     - assets/images/quizzes/
+    - assets/images/quizzes/alphabets/
 
   fonts:
     - family: Lobster
